Fix centre alignment

--- a/radial-controls.css
+++ b/radial-controls.css
@@ -11,8 +11,8 @@
     height:260px; 
     padding:40px;
     position:absolute;
-    margin-top:-150px;
-    margin-left:-150px;
+    margin-top:-170px;
+    margin-left:-170px;
 }
 
 .radial-control .rc-main {
